--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <section class="header">
             <nav>
                  <h1>Hori<span class="seo">seo</span>n</h1>
+                 <!-- Links to jump to appropriate section of web page -->
                     <ul>
                         <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                         <li><a href="#online-reputation-management">Online Reputation Management</a></li>
