--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social media marketing meeting"/>
                 <h2>Social Media Marketing</h2>
                 <p class="main-p">Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
-            </section
+            </section>
         </section>
 <!-- Right Side bar of content on landing page -->
         <aside class="benefits">
