--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
                 <img src="./assets/images/cost-management.png" alt="cost-management icon"/>
                 <p class="side-bar">As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page</p>
             </section>
+            <!-- Footer info -->
+    <div class="footer">
+        <h2>Made with ❤️️ by Horiseon</h2>
+        <p>
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+    </p>
+    </div>
         </aside>
         </div>
         </div>
-<!-- Footer info -->
-        <footer>
-            <h2>Made with ❤️️ by Horiseon</h2>
-            <p class="footer-p">&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-        </footer>
     </body>
 </html>
